# rnl

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  dataset.csv  debugging.csv  main.py  model_0.pt  model_1.pt  model_2.pt  model_3.pt  model_elite.pt  output.rrd  output_map.rrd  pyproject.toml  requirements.txt  setup.py  test_model_base.py  train.py  train_model_base.py
.github/workflows/: docker.yml  main.yaml  release.yaml
benchmarking/: train.py
benchmarks/: demo_training.py  start_training.py
checkpoints/: model_ppo_5_80896.pt
config/: agent.yaml
data/map/: map.yaml
data/map10/: map10.pgm  map10.yaml
data/map3/: map3.yaml
data/map7/: map7.pgm  map7.yaml
data/map8/: map8.pgm  map8.yaml
data/map9/: map9.pgm  map9.yaml
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh  requirements.txt
docs/: conf.py  index.rst  microvault.environment.rst  microvault.environment.utils.rst  microvault.rst  modules.rst  package.json  requirements.txt  tests.rst
docs/.next/: BUILD_ID  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
experiments/: feedback_llm_avoid.py  feedback_llm_long.py  feedback_llm_turn.py  results.py  results_avoid.py  results_long.py  results_turn.py  sweep_avoid.py  sweep_long.py  sweep_training.py  sweep_turn.py  without_feedback_avoid.py  without_feedback_long.py  without_feedback_turn.py
microvault/: __init__.py  config_robot.py  micro.py
microvault/agent/: agent.py  model.py
microvault/algorithm/: __init__.py  agent.py  td3.py  td3agent.py
microvault/algorithms/: agent.py  ppo.py  rainbow.py
microvault/components/: __init__.py  icm.py  replay_buffer.py  replay_data.py  replaybuffer.py  rldataset.py  sampler.py  sumtree.py
microvault/configs/: config.py  config.yaml  default.yaml  sweep.yaml
microvault/engine/: __init__.py  collision.py  engine.py  map2d.py  sanity.py  utils.py  world_generate.py
microvault/engines/: sanity.py
microvault/environment/: __init__.py  continuous.py  environment_navigation.py  generate.py  generate_world.py  robot.py
microvault/hpo/: mutation.py
microvault/models/: __init__.py  curiosity.py  deterministic.py  model.py  noise.py  rnd.py
microvault/network/: model.py
microvault/networks/: evolvable_cnn.py  evolvable_mlp.py
microvault/training/: __init__.py  config.py  engine.py  eval.py  finetune.py  interface.py  learn.py  run.py  sanity.py  train.py  train_off_policy.py  trainer.py  training.py  utils.py  visualize.py
microvault/utils/: map2d.pyx  setup.py
microvault/wrapper/: accelerate.py  custom_wrapper.py  visualization.py  wrapper.py
microvault/wrappers/: make_evolvable.py
rnl/: __init__.py
rnl/agents/: evaluate.py  evaluator.py
rnl/algorithms/: algo_utils.py  ppo.py  ppos.py  rainbow.py
rnl/benchmarks/: accelerate.yaml  train_multi_env.py  train_with_acc.py  train_with_turtlebot.py
rnl/components/: noise.py  replay_buffer.py  replay_data.py  sampler.py  scale_dataset.py
rnl/configs/: actions.py  config.py  limits.yaml  rewards.py  (+4 more)
ros/: Dockerfile  Makefile  demo.bash  docker-compose.yaml  kill.bash  run.bash  setup.bash  teleop.bash  turtlebot.Dockerfile
tests/: test_agent_learn.py  test_agent_predict.py  test_collision.py  test_config_robot.py  test_engine.py  test_environment.py  test_filter_segments.py  test_gemini.py  test_generate.py  test_learning.py  test_lidar.py  test_map2d.py  test_network_actor.py  test_network_critic.py  test_network_model.py  test_plot_environment.py  test_replay_buffer.py  test_reward.py  test_robot.py  test_robot_goal_spawn.py
weights/: .gitattributes  checkoint_critic_1200.pth  checkpoint_actor_1200.pth  checkpoint_actor_optimizer_1200.pth  checkpoint_critic_optimizer_1200.pth
(+236 files in other folders)
