[tool.poetry]
name = "rnl"
version = "0.3.42"
description = "RNL - Robot Navigation Learning"
authors = ["Nicolasalan <grottimeireles@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{ include = "rnl" }]

[tool.poetry.urls]
documentation = "https://rnl.readthedocs.io"
bugs = "https://github.com/microvault/rnl/issues"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
gymnasium = ">=0.28.1,<0.30.0"
matplotlib = ">=3.3"
numpy = ">=1.24.2,<3.0.0"
torch = "^2.0.1"
pymunk = "6.11.0"
scikit-image = "*"
tqdm = "^4.65.0"
numba = ">=0.59.1,<0.61.0"
shapely = ">=1.8,<3.0"
omegaconf = "^2.3.0"
scikit-learn = "^1.6.0"
opencv-python = "^4.10.0.84"
rtree = "^1.3.0"
pillow = "^11.1.0"
stable-baselines3 = "^2.4.1"
tensorboard = "^2.18.0"
gym = "^0.26.2"
wandb = "^0.19.4"
sb3-contrib = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = ">=4.1,<6.0"
black = "^24.1.1"
isort = "^5.13.2"
ruff = ">=0.2.1,<0.7.0"
codespell = "^2.2.6"
commitizen = "^3.29.1"
pre-commit = "^3.7.0"

[tool.pytest.ini_options]
pythonpath = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
