[project]
name = "rnl"
version = "0.4.0"
description = "RNL - Robot Navigation Learning"
readme = "README.md"
authors = [{ name = "Nicolasalan", email = "grottimeireles@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10,<4.0"
dependencies = [
    "gymnasium >=0.28.1, <0.30.0",
    "matplotlib >=3.3",
    "torch >=2.0.1, <3.0.0",
    "pymunk ==6.11.0",
    "tqdm >=4.65.0, <5.0.0",
    "numba >=0.59.1, <0.61.0",
    "shapely >=1.8, <3.0",
    "stable-baselines3 >=2.4.1, <3.0.0",
    "wandb ==0.17.6",
    "google-genai>=1.3.0",
    "numpy>=1.26.4",
    "sb3-contrib>=2.6.0",
]

[project.urls]
documentation = "https://rnl.readthedocs.io"
bugs = "https://github.com/microvault/rnl/issues"

[dependency-groups]
dev = [
    "pytest >=8.0.0, <9.0.0",
    "pytest-cov >=4.1, <6.0",
    "black >=24.1.1, <25.0.0",
    "isort >=5.13.2, <6.0.0",
    "ruff >=0.2.1, <0.7.0",
    "codespell >=2.2.6, <3.0.0",
    "commitizen >=3.29.1, <4.0.0",
    "pre-commit >=3.7.0, <4.0.0",
    "rerun-sdk>=0.22.1",
]

[tool.pytest.ini_options]
pythonpath = "."
norecursedirs = ["ros/playground", "ros/tb3_ws"]

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
