[project]
name = "rnl"
version = "0.4.1"
description = "RNL - Robot Navigation Learning"
readme = "README.md"
authors = [{ name = "Nicolasalan", email = "grottimeireles@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10,<4.0"
dependencies = [
    "gymnasium >=0.28.1, <0.30.0",
    "matplotlib >=3.3",
    "numba >=0.59.1, <0.61.0",
    "shapely >=1.8, <3.0",
    "stable-baselines3 >=2.4.1, <3.0.0",
    "wandb ==0.17.6",
    "numpy>=1.26.4",
    "scikit-image>=0.25.2",
    "torch>=2.5.1",
    "pymunk>=6.11.1",
    "tqdm>=4.67.1",
    "backoff>=2.2.1",
    "google-genai>=1.3.0",
    "google-api-core>=2.24.2",
    "moviepy>=2.2.0",
    "jax>=0.5.3",
    "huggingface-hub>=0.32.2",
    "trimesh>=4.6.10",
    "mesh2sdf>=1.1.0",
]

[project.urls]
documentation = "https://rnl.readthedocs.io"
bugs = "https://github.com/microvault/rnl/issues"

[project.optional-dependencies]
dev = [
    "pytest >=8.0.0, <9.0.0",
    "pytest-cov >=4.1, <6.0",
    "black >=24.1.1, <25.0.0",
    "isort >=5.13.2, <6.0.0",
    "ruff >=0.2.1, <0.7.0",
    "codespell >=2.2.6, <3.0.0",
    "commitizen >=3.29.1, <4.0.0",
    "pre-commit >=3.7.0, <4.0.0",
    "rerun-sdk>=0.22.1",

]
inference = ["torch >=2.0.1, <3.0.0", "numpy>=1.26.4"]

[tool.pytest.ini_options]
pythonpath = "."
norecursedirs = ["ros/playground", "ros/tb3_ws"]

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
